[enhancement] - addCartEndPoint
